# PCTK

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
cmake/: FindReadline.cmake  FindWrapCppUTest.cmake  FindWrapLibffi.cmake  PCTKAndroidHelpers.cmake  PCTKCMakeHelpers.cmake  PCTKCMakePackageVersionFile.cmake.in  PCTKCMakeVersionHelpers.cmake  PCTKCompilerHelpers.cmake  PCTKConfigure.cmake  PCTKConfigureHelpers.cmake  PCTKDependenciesHelpers.cmake  PCTKDoxygenHelpers.cmake  PCTKExecutableHelpers.cmake  PCTKFindPackageHelpers.cmake  PCTKFinishPkgConfigFile.cmake  PCTKFlagHandlingHelpers.cmake  PCTKFrameworkHelpers.cmake  PCTKGlobalStateHelpers.cmake  PCTKGlobalTargets.cmake  PCTKInstallHelpers.cmake  PCTKInternalTargets.cmake  PCTKLibraryHelpers.cmake  PCTKModuleConfig.cmake.in  PCTKModuleDependencies.cmake.in  PCTKModuleHelpers.cmake  PCTKOptionHelpers.cmake  PCTKPkgConfigHelpers.cmake  PCTKPlatformAndroid.cmake  PCTKPlatformSupport.cmake  PCTKPlatformTargets.cmake  PCTKPrecompiledHelpers.cmake  PCTKPublicDependencyHelpers.cmake  PCTKPublicTargetHelpers.cmake  PCTKPublicWalkLibsHelpers.cmake  PCTKRpathHelpers.cmake  PCTKScopeFinalizerHelpers.cmake  PCTKSeparateDebugInfo.cmake  PCTKSetup.cmake  PCTKSubdirectoryHelpers.cmake  PCTKSyncIncludeHelpers.cmake  (+7 more)
pctk_core/: .cmake.conf  CMakeLists.txt  configure.cmake
pctk_core/cmake/: PCTKCoreGlobalTargets.cmake  PCTKInternalTargets.cmake  PCTKPlatformTargets.cmake
pctk_core/source/: core_pch.h  object.cpp  object.h
pctk_core/tests/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/core/: CMakeLists.txt  configure.cmake
src/libs/core/cmake/: PCTKCoreGlobalTargets.cmake  PCTKFileConfigure.txt.in  PCTKInternalTargets.cmake  PCTKPathHasSymlinksCheck.cmake  PCTKPlatformTargets.cmake
src/libs/core/include/: PCTKCore  pctkAny.h  pctkAtomic.h  pctkAtomicInt.h  pctkCompiler.h  pctkError.h  pctkException.h  pctkFileSystem.h  pctkFlags.h  pctkGlobal.h  pctkLimits.h  pctkMacros.h  pctkObject.h  pctkPreprocessor.h  pctkProcessor.h  pctkSharedLibrary.h  pctkString.h  pctkSystem.h  pctkTag.h  pctkTypeInfo.h  pctkTypeTraits.h  pctkTypes.h
src/libs/core/include/private/: pctkAtomic_p.h  pctkFileSystem_p.h  pctkObject_p.h  pctkSharedLibrary_p.h
src/libs/core/source/: pctkCorePch.h
src/libs/core/source/global/: pctkCompiler.h  pctkGlobal.h  pctkLimits.h  pctkMacros.h  pctkPreprocessor.h  pctkProcessor.h  pctkSystem.h  pctkTypes.h
src/libs/core/source/io/: pctkFileSystem.cpp  pctkFileSystem.h  pctkFileSystem_p.h
src/libs/core/source/kernel/: pctkObject.cpp  pctkObject.h  pctkObject_p.h
src/libs/core/source/platform/: pctkPlatformDefs.h.in
src/libs/core/source/platform/mkspecs/common/aix/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/common/android/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/common/bsd/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/common/c89/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/common/mac/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/common/posix/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/common/qnx/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/cygwin-g++/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/darwin-g++/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/linux-clang/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/linux-g++/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/macx-clang/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/wasm-emscripten/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/win32-clang-g++/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/win32-clang-msvc/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/win32-g++/: pctkPlatformDefs.h
src/libs/core/source/platform/mkspecs/win32-msvc/: pctkPlatformDefs.h
src/libs/core/source/plugin/: pctkSharedLibrary.cpp  pctkSharedLibrary.h  pctkSharedLibrary_p.h
src/libs/core/source/thread/: pctkAtomic.cpp  pctkAtomic.h  pctkAtomicInt.h  pctkAtomicInt_c11.cpp  pctkAtomicInt_cxx11.cpp  pctkAtomicInt_gcc.cpp  pctkAtomicInt_p.h  pctkAtomic_c11.cpp  pctkAtomic_cxx11.cpp  pctkAtomic_msvc.cpp  pctkAtomic_p.h
src/libs/core/source/tools/: pctkAny.h  pctkError.cpp  pctkError.h  pctkException.cpp  pctkException.h  pctkFlags.h  pctkString.h  pctkTag.cpp  pctkTag.h  pctkTypeInfo.h  pctkTypeTraits.h
src/libs/core/tests/tools/: CMakeLists.txt  tst_any.cpp  tst_atomic.cpp  tst_flags.cpp
src/libs/osgi/: CMakeLists.txt  configure.cmake
src/libs/osgi/include/: PCTKOsgi  pctkOsgiFramework.h
src/libs/osgi/source/: pctkOsgiFramework.cpp  pctkOsgiFramework.h  pctkOsgiGlobal.h  pctkOsgiPch.h
src/tools/: CMakeLists.txt  configure.cmake
src/tools/global/: CMakeLists.txt
src/tools/global/include/: PCTKTools
src/tools/rcc/: CMakeLists.txt
src/tools/rcc/source/: main.cpp
